[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/BackgroundPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/ForegroundPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/CollectionFilter.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/view/CollectionView.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/collection_builder/CollectionBuilder.gd" type="Script" id=5]
[ext_resource path="res://gui/CollectionToolbar.tscn" type="PackedScene" id=6]

[node name="CollectionBuilder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForegroundPanel" parent="BackgroundPanel/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer/ForegroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 566.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Toolbar" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 570.0
margin_right = 1014.0
margin_bottom = 70.0
size_flags_vertical = 3

[node name="CollectionView" parent="BackgroundPanel/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
